[tool.poetry]
name = "monster-spawner"
version = "0.1.0"
description = "Simple service handling Minecraft mobs"
authors = ["Tobias <piotr.tobiasz.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
structlog = "^21.5.0"
colorama = "^0.4.4"
environs = "^9.4.0"
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
wemake-python-styleguide = "^0.16.0"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = ["src"]
