[tool.poetry]
name = "monster-spawner"
version = "0.1.0"
description = "API handling Minecraft mobs"
authors = ["Tobias <piotr.tobiasz.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
structlog = "^21.5.0"
colorama = "^0.4.4"
environs = "^9.4.0"
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.5"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
wemake-python-styleguide = "^0.16.0"
black = {version = "^21.12b0", allow-prereleases = true}
pytest = "^6.2.5"
httpx = "^0.21.3"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
profile = "black"
default_section = "THIRDPARTY"
known_first_party = ["monster_spawner"]

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "strict"
addopts = "--strict-markers -vv --cache-clear --maxfail=1 --cov=monster_spawner --cov-report=term --cov-report=html --cov-branch --cov-fail-under=80 --no-cov-on-fail -p no:warnings"

[tool.flake8]
exclude = ".git,__pycache__,*/static/*,*/migrations/*,*/test_*/"
ignore = "WPS305,WPS306,WPS431,WPS237,D106,D107,WPS404,B008"
per-file-ignores = """
    monster_spawner/settings.py:WPS115
    */__init__.py:D104
    */conftest.py:DAR101,DAR201,DAR301,WPS430,WPS442
"""
max-line-length = 80
inline-quotes = '"'
